--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@sermons/bones",
   "repository": "sermons/bones",
-  "description": "Ez37:1-14 The Dry Bones",
+  "description": "Ez37:1-14 The Dry Bones (4/5)",
   "keywords": [
     "slides",
     "sermons",
